--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
+  flex-direction: column;
   gap: 10px;
   height: 100%;
   width: 100vw;
